# Caffe_BEGAN

./: CMakeLists.txt  README.md
include/: NN_Agent.h
launch_files/: test.sh  train.sh
src/: NN_Agent.cpp  main.cpp
